TypeError: Cannot read property 'hex' of undefined

--- a/Node/views/Nunjucks_Hello.html
+++ b/Node/views/Nunjucks_Hello.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>模板引擎测试</title>
 </head>
 <body>
-
+    <h1>Hello, {{ name }} ~</h1>
 </body>
 </html>
